Kubernetes_Yaml/ohsamplenetpol/nsapi-denyallingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: api
spec:
  podSelector: {}
  policyTypes:
  - Ingress
